--- a/client/src/Pages/Passwords/Passwords.css
+++ b/client/src/Pages/Passwords/Passwords.css
@@ -1,7 +1,13 @@
+
 .passwords {
+  width: 100%;
+  height: 90vh;
   padding: 2rem;
   text-align: center;
   font-family: 'Poppins', sans-serif;
+  color: #224;
+  background:url(https://source.unsplash.com/E8Ufcyxz514/2400x1823)center / cover no-repeat fixed;
+  
 }
 
 .passwords hr {
